syntax = "proto3";
package pb.product_service;
option go_package = "pb/product_service";

message Product {
	int64 id = 1;
	string name = 2;
	double price = 3;
	int64 stock = 4;
	string description = 5;
	string image_url = 6;
	string created_at = 7;
	string updated_at = 8;
	string deleted_at = 9;
}